@@ -151,7 +151,7 @@
         <font>
             <name>font_lyrics_bold</name>
             <filename>RobotoCondensed-Bold.ttf</filename>
-            <size>50</size>
+            <size>70</size>
         </font>
 
         <!-- Big weather temp -->        
