@@ -1,5 +1,6 @@
 [B]0.9.17[/B]
 Change user rating to star icon
+Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyrics
 
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
